--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,63 @@
-/*basic styling for template at the start*/
+* {
+  box-sizing: border-box;
+}
+
 body {
-  background-color: #282c34;
-  color: white;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 16px;
-  text-align: center;
-  padding: 20px;
+  font-family: sans-serif;
+  margin: 20px;
+  padding: 0;
 }
-p {
-  color: #61dafb;
-  font-size: 18px;
-  margin: 10px 0;
-}
+
 h1 {
-  color: #bd9ee9;
-  font-size: 56px;
-  margin-bottom: 20px;
+  margin-top: 0;
+  font-size: 22px;
+}
+
+h2 {
+  margin-top: 0;
+  font-size: 20px;
+}
+
+h3 {
+  margin-top: 0;
+  font-size: 18px;
+}
+
+h4 {
+  margin-top: 0;
+  font-size: 16px;
+}
+
+h5 {
+  margin-top: 0;
+  font-size: 14px;
+}
+
+h6 {
+  margin-top: 0;
+  font-size: 12px;
+}
+
+code {
+  font-size: 1.2em;
+}
+
+ul {
+  padding-inline-start: 20px;
+}
+
+body {
+  padding: 5px
+}
+label {
+  display: block;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+th {
+  padding-top: 10px;
+}
+td {
+  padding: 2px;
+  padding-right: 40px;
 }
